--- a/Lia.html
+++ b/Lia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Love Button</title>
+  <title>Lia The Great</title>
   <style>
 
     p {
@@ -36,7 +36,7 @@
 
 <script>
   function showLoveMessage() {
-    alert("Hi Lia, take care always. I am so happy that I met you. I L*v* Y**");
+    alert("Hi Lia, take care always. I am so happy that I met you.I L.......");
   }
 </script>
 
